<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:gravity="start"
        android:text="@string/default_total_amount"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTotalAmountLabel"
        app:layout_constraintStart_toStartOf="@+id/tvTipAmount"
        app:layout_constraintTop_toTopOf="@+id/tvTotalAmountLabel"
        app:layout_constraintVertical_bias="0.529" />

    <TextView
        android:id="@+id/tvBaseLabel"
        android:layout_width="82dp"
        android:layout_height="40dp"
        android:layout_marginTop="84dp"
        android:layout_marginStart="40dp"
        android:gravity="end"
        android:text="@string/base"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="@+id/tvTipPercentageLabel"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTotalAmountLabel"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:gravity="end"
        android:labelFor="@+id/tvTotalAmount"
        android:text="@string/amount"
        android:textAllCaps="false"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@+id/tvTipLabel"
        app:layout_constraintEnd_toEndOf="@id/tvBaseLabel" />

    <TextView
        android:id="@+id/tvTipLabel"
        android:layout_width="82dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:gravity="end"
        android:labelFor="@id/tvTipAmount"
        android:text="@string/tip_text"
        android:textAllCaps="false"
        android:textSize="24sp"

        app:layout_constraintEnd_toEndOf="@+id/tvTotalAmountLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvTipPercentageLabel" />

    <TextView
        android:id="@+id/tvTipPercentageLabel"
        android:layout_width="82dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:gravity="end"
        android:labelFor="@+id/seekBar"
        android:text="@string/tip"
        android:textAllCaps="false"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvTipLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvBaseLabel" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:max="30"
        android:progress="24"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipPercentageLabel"
        app:layout_constraintStart_toStartOf="@+id/etAmount"
        app:layout_constraintTop_toTopOf="@+id/tvTipPercentageLabel"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="195dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="40dp"
        android:ems="8"
        android:gravity="start"
        android:hint="@string/bill_amount"
        android:inputType="number"
        android:text="@string/Amount"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvBaseLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvBaseLabel"
        app:layout_constraintTop_toTopOf="@+id/tvBaseLabel"
        app:layout_constraintVertical_bias="0.55"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:gravity="start"
        tools:text="@string/default_tip_amount"
        android:textSize="28sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/tvTotalAmount"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>